--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "@intlify/vue-i18n-loader": "^4.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
