--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "pinia": "^2.0.30",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
