--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^5.1.1",
+    "dotenv": "^16.3.1",
     "gsap": "^3.12.2",
     "pinia": "^2.0.30",
+    "sql.js": "^1.8.0",
+    "tinymce": "^6.7.2",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-awesome-paginate": "^1.1.46",
@@ -23,6 +27,8 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "vite": "^4.0.0"
+    "typescript": "^5.2.2",
+    "vite": "^4.0.0",
+    "vite-plugin-node-polyfills": "^0.16.0"
   }
 }
