--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^5.1.1",
-    "dotenv": "^16.3.1",
     "gsap": "^3.12.2",
     "pinia": "^2.0.30",
     "sql.js": "^1.8.0",
+    "swiper": "^11.0.5",
     "tinymce": "^6.7.2",
     "vee-validate": "^4.7.4",
-    "vue": "^3.2.45",
+    "vue": "^3.4.15",
     "vue-awesome-paginate": "^1.1.46",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.8.1",
     "@intlify/vue-i18n-loader": "^4.2.0",
+    "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
