--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "dev --host": "vite --host",
+    "dev host": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
