Move images to "public" folder. Add to gitignore all images

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,16 @@ coverage
 *.njsproj
 *.sln
 *.sw?
-package.json
-package-lock.json
 .env
 RUN.bat
 .env
+
+*.webp
+*.jpg
+*.jpeg
+*.png
 idea/websiteName.md
+bugs
+plugins
+test.js
+app
