--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^5.1.1",
-    "gsap": "^3.12.2",
+    "@vueuse/core": "^10.9.0",
+    "gsap": "^3.12.5",
     "pinia": "^2.0.30",
     "sql.js": "^1.8.0",
     "swiper": "^11.0.5",
     "vee-validate": "^4.7.4",
-    "vue": "^3.4.15",
+    "vue": "^3.4.21",
     "vue-awesome-paginate": "^1.1.46",
+    "vue-editor-js": "^2.0.2",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
   },
@@ -27,7 +29,6 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "typescript": "^5.2.2",
     "vite": "^4.0.0",
     "vite-plugin-node-polyfills": "^0.16.0"
   }
