--- a/compose.yaml
+++ b/compose.yaml
@@ -7,15 +7,30 @@ networks:
 services:
   app:
     container_name: app
-    build: .
+    build:
+      context: .
+      dockerfile: /docker/node/Dockerfile
+    # volumes:
+    #   - ./dist:/usr/share/nginx/html
+    # ports:
+    #   - 3000:3000
+    # networks:
+    #   - network
+    # depends_on:
+    #   - mysql
+
+  php:
+    container_name: php
+    build:
+      context: .
+      dockerfile: /docker/php/Dockerfile
     volumes:
       - ./dist:/usr/share/nginx/html
-    ports:
-      - 3000:3000
+      - ./app/php-ini:/usr/local/etc/php/custom.d
+    environment:
+      PHP_INI_SCAN_DIR: /usr/local/etc/php/custom.d:/usr/local/etc/php/conf.d
     networks:
       - network
-    depends_on:
-      - mysql
 
   nginx:
     container_name: nginx
@@ -24,8 +39,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - "./vhost.conf:/etc/nginx/conf.d/default.conf"
-      - "./dist:/usr/share/nginx/html"
+      - ./docker/nginx/vhost.conf:/etc/nginx/conf.d/default.conf
+      - ./dist:/usr/share/nginx/html
     networks:
       - network
     depends_on:
@@ -36,13 +51,13 @@ services:
     container_name: mysql
     image: mysql:5.7
     restart: unless-stopped
-    ports:
-      - 1000:3306
     volumes:
       - "./app/mysql-data:/var/lib/mysql"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: interiorsteel
+    networks:
+      - network
 
   phpmyadmin:
     container_name: phpmyadmin
