--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sql.js": "^1.8.0",
     "swiper": "^11.0.5",
     "vee-validate": "^4.7.4",
-    "vue": "^3.4.24",
+    "vue": "^3.4.25",
     "vue-awesome-paginate": "^1.1.46",
     "vue-editor-js": "^2.0.2",
     "vue-i18n": "^9.2.2",
@@ -27,6 +27,8 @@
     "@intlify/vue-i18n-loader": "^4.2.0",
     "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "vite": "^4.0.0",
