--- a/compose.yaml
+++ b/compose.yaml
@@ -4,20 +4,24 @@ networks:
   network:
     name: network
 
+secrets:
+  db_root_password:
+    file: ./db_root_password.txt
+
 services:
   # app:
-  #   container_name: app
-  #   build:
-  #     context: .
-  #     dockerfile: /docker/node/Dockerfile
-    # volumes:
-    #   - ./dist:/usr/share/nginx/html
-    # ports:
-    #   - 3000:3000
-    # networks:
-    #   - network
-    # depends_on:
-    #   - mysql
+  # container_name: app
+  # build:
+  #   context: .
+  #   dockerfile: /docker/node/Dockerfile
+  # volumes:
+  #   - ./dist:/usr/share/nginx/html
+  # ports:
+  #   - 3000:3000
+  # networks:
+  #   - network
+  # depends_on:
+  #   - mysql
 
   php:
     container_name: php
@@ -29,6 +33,11 @@ services:
       - ./docker/php:/usr/local/etc/php/custom.d
     environment:
       PHP_INI_SCAN_DIR: /usr/local/etc/php/custom.d:/usr/local/etc/php/conf.d
+      DB_PASSWORD_FILE: /run/secrets/db_root_password
+    # env_file:
+    #   - ./.env.development.local
+    secrets:
+      - db_root_password
     networks:
       - network
 
@@ -54,8 +63,10 @@ services:
     volumes:
       - "./app/mysql-data:/var/lib/mysql"
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
       MYSQL_DATABASE: interiorsteel
+    secrets:
+      - db_root_password
     networks:
       - network
 
