Added variables for mail  API

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ DB_NAME=changeMe
 DB_HOST=changeMe
 DB_USER=changeMe
 DB_PASSWORD=changeMe
+MAIL_ADDRESS_FROM=changeMe
+MAIL_ADDRESS_TO=changeMe
+MAIL_HOST=changeMe
+MAIL_USERNAME=changeMe
+MAIL_PASSWORD=changeMe
+MAIL_PORT=changeMe
