Fix the error occured when add long text in DB

--- a/compose.yaml
+++ b/compose.yaml
@@ -75,6 +75,7 @@ services:
       - 1500:80
     environment:
       - PMA_HOST=mysql
+      - UPLOAD_LIMIT=100000000
     networks:
       - network
     depends_on:
